<resources>
    <string name="app_name">Beauty Masters</string>

    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="patronymic">Отчество</string>
    <string name="gender">Пол</string>

    <string name="email">Почта</string>
    <string name="password">Пароль</string>
    <string name="new_password">Новый пароль</string>
    <string name="update_password">Обновить пароль</string>
    <string name="current_password">Текущий пароль</string>
    <string name="new_password_error">Новый пароль</string>
    <string name="confirm_password">Подтвердите пароль</string>
    <string name="short_password_error">Коротки пароль</string>
    <string name="confirm_password_error">Пароли не совпадают</string>
    <string name="registration">Регистрация</string>

    <string name="profile">Профиль</string>
    <string name="calendar">Календарь</string>
    <string name="timetable">Расписание</string>
    <string name="personal_area">Личный кабинет</string>
    <string name="setting">Настройка</string>
    <string name="settings">Настройки</string>

    <string name="offer">Услуга</string>
    <string name="my_offers">Мои услуги</string>
    <string name="offer_create">Создать услугу</string>
    <string name="offer_delete">Удалить данную услугу?</string>
    <string name="offer_edit">Редактирвоание услуги</string>
    <string name="offer_description">Описание (коментарий)</string>
    <string name="slt_offer_category">Выбор категории</string>
    <string name="slt_offer_type">Выбор услуги</string>
    <string name="slt_offer_type_property">Выбор параметра услуги</string>

    <string name="price_by_agreement">По договоренности</string>
    <string name="price_error_to_less_than_from">Введите значение больше %d.</string>

    <string name="window">Окно</string>
    <string name="add_window">Добавить окно</string>
    <string name="edit_work_windows">Редактировать окна</string>
    <string name="edit_work_window">Изменить рабочее окно</string>
    <string name="create_work_window">Новое рабочее окно</string>
    <string name="inside_work_window">Входит в окно: %s</string>
    <string name="outside_work_time">Выходит за рабочее время: %s</string>
    <string name="outside_work_window">Выходит за пределы дня: %s</string>
    <string name="times_equals">Время должно отличаться.</string>
    <string name="inverse_range">Начало не может быть больше конца.</string>
    <string name="shadow_windows_error">Окно не может перекрывать другие окна.</string>

    <string name="monday">Понедельник</string>
    <string name="tuesday">Вторник</string>
    <string name="wednesday">Среда</string>
    <string name="thursday">Четверг</string>
    <string name="friday">Пятница</string>
    <string name="saturday">Суббота</string>
    <string name="sunday">Воскресенье</string>

    <string name="monday_short">ПН</string>
    <string name="tuesday_short">ВТ</string>
    <string name="wednesday_short">СР</string>
    <string name="thursday_short">ЧТ</string>
    <string name="friday_short">ПТ</string>
    <string name="saturday_short">СБ</string>
    <string name="sunday_short">ВС</string>

    <string name="january">январь</string>
    <string name="february">февраль</string>
    <string name="march">март</string>
    <string name="april">апрель</string>
    <string name="may">май</string>
    <string name="june">июнь</string>
    <string name="july">июль</string>
    <string name="august">август</string>
    <string name="september">сентябрь</string>
    <string name="october">октябрь</string>
    <string name="november">ноябрь</string>
    <string name="december">декабрь</string>

    <string name="january_declination">января</string>
    <string name="february_declination">февраля</string>
    <string name="march_declination">марта</string>
    <string name="april_declination">апреля</string>
    <string name="may_declination">мая</string>
    <string name="june_declination">июня</string>
    <string name="july_declination">июля</string>
    <string name="august_declination">августа</string>
    <string name="september_declination">сентября</string>
    <string name="october_declination">октября</string>
    <string name="november_declination">ноября</string>
    <string name="december_declination">декабря</string>

    <string name="january_short">янв</string>
    <string name="february_short">февр</string>
    <string name="march_short">март</string>
    <string name="april_short">апр</string>
    <string name="may_short">май</string>
    <string name="june_short">июнь</string>
    <string name="july_short">июль</string>
    <string name="august_short">авг</string>
    <string name="september_short">сент</string>
    <string name="october_short">окт</string>
    <string name="november_short">нояб</string>
    <string name="december_short">дек</string>

    <string name="blank_string"> </string>

    <string name="add">Добавить</string>
    <string name="edit">Изменить</string>
    <string name="required_to_fill">*Обязательно к заполнению</string>
    <string name="save">Сохранить</string>
    <string name="update">Обновить</string>
    <string name="comment">Коментарий</string>

    <string name="select">Выбрать</string>
    <string name="selected_count">Выбрано: %d</string>
    <string name="dont_selected">Не выбрано</string>
    <string name="client_dont_selected">Не выбран</string>

    <string name="date">Дата</string>
    <string name="time">Время</string>

    <string name="total_minutes">%d\nмин</string>
    <string name="next">Далее</string>
    <string name="title">Заголовок</string>
    <string name="holiday">Выходной</string>
    <string name="not_specified">Не указано</string>
    <string name="not_configured">Не настроено</string>
    <string name="end">Конец</string>
    <string name="start">Начало</string>

    <string name="workday">Рабочий день</string>
    <string name="workday_arg">Рабочий день %s</string>
    <string name="workday_start">Начало рабочего дня</string>
    <string name="workday_finish">Конец рабочего дня</string>
    <string name="workday_holiday">Пометить как выходной день</string>

    <string name="client">Клиент</string>
    <string name="clients">Клиенты</string>
    <string name="client_pick">Выбор клиента</string>
    <string name="contacts">Контакты</string>
    <string name="client_edit">Редактирование клиента</string>
    <string name="client_create">Создание клиента</string>
    <string name="add_from_contacts">Добавить из контактов</string>
    <string name="client_error_name">Имя не может быть пустым</string>
    <string name="client_error_number">Номер введен не правильно</string>


    <string name="reservation">Запись</string>

    <string name="user">Пользователь</string>
    <string name="week_sequence">Рабочая неделя</string>

    <string name="warning">Предупреждение</string>
    <string name="confirm">Подтвердить</string>
    <string name="delete">Удалить</string>
    <string name="cancel">Отменить</string>

    <string name="delete_windows_warning">Будет удалено %s</string>
    <string name="phone_number">Мобильный номер</string>

    <string name="slc_free_window">Выбор свободного окна</string>
    <string name="search_title">Поиск</string>

</resources>