<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".presentation.feature.registration.view.RegistrationFragment">

    <include
        android:id="@+id/up_bar"
        layout="@layout/view_up_bar" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/current_password_input_layout"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_medium"
        android:hint="@string/current_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/main_panel"
        app:startIconTint="@color/colorAccept">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/current_password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textAutoCorrect"
            android:maxLines="1"
            android:nextFocusForward="@id/new_password_edit_text"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/new_password_input_layout"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_small"
        android:hint="@string/new_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/main_panel"
        app:startIconTint="@color/colorAccept">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/new_password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textAutoCorrect"
            android:maxLines="1"
            android:nextFocusForward="@id/confirm_new_password_edit_text"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirm_new_password_input_layout"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_medium"
        android:hint="@string/confirm_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_input_layout"
        app:passwordToggleTint="@color/colorAccept"
        app:startIconTint="@color/colorAccept">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirm_new_password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textAutoCorrect"
            android:maxLines="1"
            android:nextFocusForward="@id/button"
            android:paddingHorizontal="@dimen/margin_small"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_medium"
        android:layout_marginVertical="@dimen/margin_xsmall"
        android:enabled="false"
        android:background="@drawable/background_rounded_button"
        android:maxLines="1"
        android:text="@string/update"
        app:drawableTint="@color/white" />

</LinearLayout>