<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/BottomSheetDialogTheme"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <include
        android:id="@+id/up_selector"
        layout="@layout/view_bottom_sheet_up_selector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_xsmall"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/topic_text_view"
        style="@style/TitleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_xsmall"
        android:gravity="center"
        android:text="Рабочее время"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/start_time_text_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/up_selector" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/start_time_text_view"
        style="@style/DefaultText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_medium"
        android:gravity="center"
        android:text="@string/start"
        android:textSize="@dimen/text_medium"
        app:layout_constraintBottom_toTopOf="@id/end_time_text_view"
        app:layout_constraintStart_toStartOf="@id/start"
        app:layout_constraintTop_toBottomOf="@+id/topic_text_view" />

    <ru.kalistratov.template.beauty.presentation.view.time.EditTimeView
        android:id="@+id/start_edit_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/start_time_text_view"
        app:layout_constraintEnd_toEndOf="@id/end"
        app:layout_constraintTop_toTopOf="@+id/start_time_text_view" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/end_time_text_view"
        style="@style/DefaultText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:gravity="center"
        android:text="@string/end"
        android:textSize="@dimen/text_medium"
        app:layout_constraintStart_toStartOf="@id/start"
        app:layout_constraintTop_toBottomOf="@+id/start_time_text_view" />

    <ru.kalistratov.template.beauty.presentation.view.time.EditTimeView
        android:id="@+id/end_edit_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/end_time_text_view"
        app:layout_constraintEnd_toEndOf="@id/end"
        app:layout_constraintTop_toTopOf="@+id/end_time_text_view" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/holiday_text_view"
        style="@style/DefaultText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:gravity="center"
        android:text="@string/holiday"
        android:textSize="@dimen/text_medium"
        app:layout_constraintStart_toStartOf="@id/start"
        app:layout_constraintTop_toBottomOf="@+id/end_time_text_view" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/holiday_switch"
        android:layout_width="wrap_content"
        style="@style/Widget.Material3.CompoundButton.MaterialSwitch"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/holiday_text_view"
        app:layout_constraintEnd_toEndOf="@+id/end_edit_time"
        app:layout_constraintStart_toStartOf="@id/end_edit_time"
        app:layout_constraintTop_toTopOf="@+id/holiday_text_view"
        app:useMaterialThemeColors="true" />


    <com.google.android.material.button.MaterialButtonToggleGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/holiday_switch">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/windows_edit_btn"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Редактировать окна" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/save_btn"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Сохранить" />


    </com.google.android.material.button.MaterialButtonToggleGroup>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.07" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.93" />


</androidx.constraintlayout.widget.ConstraintLayout>
